# learning-roadmap-bot

./: .gitignore  Dockerfile  plans.db  pyproject.toml  requirements.txt
bot/: __main__.py  config.py  start.py  start_serverless.py  start_webhooks.py
bot/handlers/: __init__.py  help.py  plans.py
bot/handlers/web_app/: compare.py
bot/handlers/web_app/static/: compare.html  script.js  styles.css
bot/handlers/web_app/templates/: compare.html
bot/models/: control_form.py  discipline.py  discipline_name.py  education_direction.py  education_plan.py  user.py
bot/plans_parser/: __init__.py  education_plan_discipline.py  education_plan_file.py  parser.py  pdf_parser.py  web_parser.py
